add N8N_PROXY_HOPS to dockercompose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ x-n8n: &service-n8n
     - N8N_USER_MANAGEMENT_JWT_SECRET
     - WEBHOOK_URL=${N8N_HOSTNAME:+https://}${N8N_HOSTNAME:-http://localhost:5678}
     - NODE_FUNCTION_ALLOW_EXTERNAL=mammoth,lodash
+    - N8N_PROXY_HOPS=1
 
 x-ollama: &service-ollama
   image: ollama/ollama:latest
